--- a/app/src/main/res/layout/activity_horizontal_page.xml
+++ b/app/src/main/res/layout/activity_horizontal_page.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/common_title_bar_height"
         app:titleBarDisplayHomeAsUpEnabled="true"
-        app:titleBarTitle="HorizontalPage"/>
+        app:titleBarTitle="HorizontalPage"
+        app:titleBarRightTitle="按钮"
+        app:titleBarRightVisible="true"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,6 +21,7 @@
             android:id="@+id/rv_horizontal_page"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:numColumns="2"
             app:numRows="3"
             android:background="@color/colorPrimary"/>
 
