--- a/app/src/main/res/layout/activity_horizontal_page2.xml
+++ b/app/src/main/res/layout/activity_horizontal_page2.xml
@@ -4,52 +4,37 @@
 
     <com.example.androidsummary.android.widget.HorizontalPageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="@color/gray_normal">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image01"/>
+            style="@style/page_item_style"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image01"/>
+            style="@style/page_item_style"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image01"/>
+            style="@style/page_item_style"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image01"/>
+            style="@style/page_item_style"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image01"/>
+            style="@style/page_item_style"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image01"/>
+            style="@style/page_item_style"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image01"/>
+            style="@style/page_item_style"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image01"/>
+            style="@style/page_item_style"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image01"/>
+            style="@style/page_item_style"/>
 
     </com.example.androidsummary.android.widget.HorizontalPageView>
 
