--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,11 @@
         <item name="android:layout_marginRight">20dp</item>
     </style>
 
+    <style name="page_item_style">
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">320dp</item>
+        <item name="android:src">@drawable/image01</item>
+        <item name="background">@color/red</item>
+    </style>
+
 </resources>
