--- a/app/src/main/res/layout/item_progress_bar.xml
+++ b/app/src/main/res/layout/item_progress_bar.xml
@@ -8,9 +8,11 @@
 
     <ProgressBar
         android:id="@+id/pb_loading"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"/>
+        android:layout_marginLeft="20dp"
+        android:indeterminateDrawable="@drawable/ease_chat_loading_progress_bar"/>
 
     <TextView
         android:id="@+id/tv_name"
