Test scroll RecyclerView to the bottom.

--- a/app/src/main/res/layout/activity_recyclerview_index.xml
+++ b/app/src/main/res/layout/activity_recyclerview_index.xml
@@ -33,6 +33,11 @@
             android:onClick="gridEmpty"
             android:text="GridEmpty"/>
 
+        <TextView
+            style="@style/item_tv_style"
+            android:onClick="stackFromEnd"
+            android:text="stackFromEnd"/>
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
