--- a/app/src/main/res/layout/activity_recyclerview_index.xml
+++ b/app/src/main/res/layout/activity_recyclerview_index.xml
@@ -38,6 +38,11 @@
             android:onClick="stackFromEnd"
             android:text="stackFromEnd"/>
 
+        <TextView
+            style="@style/item_tv_style"
+            android:onClick="simpleChat"
+            android:text="simpleChat"/>
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
